--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/Portfolio_icon/Portfolio_image.svg" class="icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omar Cadingilan Portfolio</title>
   </head>
